# AquaBar

./: .gitignore  CMakeLists.txt  README.md  aqua-bar-flask.service  change_password.sh  install_flask_service.sh  pi_setup.sh  secure_setup.sh  setup_nginx.sh  setup_ssl.sh  tailscale_only.sh
.VSCodeCounter/2026-03-25_11-31-51/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
python/: backup_file.py  flask_server.py  mail_automation.py
res/: data.csv  test_data.csv
res/html/: dashboard.html  login.html
src/: Group.h  command.h  flask_thread_example.cpp  font16x32.h  font6x8.h  gui.cpp  gui.h  main.cpp  ssd1306.cpp  ssd1306.h  user.cpp  user.h  userManager.cpp  userManager.h
